Fix aot compilation.